# insurance-synthetic

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_tests_databricks.py
benchmarks/: benchmark.py
notebooks/: 01_insurance_synthetic_demo.py  02_dp_synthesizer_demo.py  benchmark.py  run_tests.py
src/insurance_synthetic/: __init__.py  _copula.py  _fidelity.py  _marginals.py  _schemas.py  _synthesiser.py  dp.py
tests/: conftest.py  test_copula.py  test_coverage_expansion_april2026.py  test_dp.py  test_dp_extended.py  test_fidelity.py  test_fidelity_extended.py  test_generate_validation.py  test_marginals.py  test_marginals_extended.py  test_regressions_p0.py  test_schemas.py  test_schemas_extended.py  test_synthesiser.py
